@@ -55,56 +55,56 @@ test_output_matches() {
 
 unset EXTRA_PDSH_ARGS
 
-test_expect_success 'PDSH_MODULE_DIR functionality' '
+test_expect_success NOTROOT 'PDSH_MODULE_DIR functionality' '
 	PDSH_MODULE_DIR=$TEST_DIRECTORY/test-modules
 	module_is_active A && module_is_active B
 '
 
 export PDSH_MODULE_DIR="$TEST_DIRECTORY/test-modules"
 
-test_expect_success 'module A takes precedence over B' '
+test_expect_success NOTROOT 'module A takes precedence over B' '
 	module_is_active misc/A && module_is_inactive misc/B
 '
 
-test_expect_success 'pdsh -M B ativates module B' '
+test_expect_success NOTROOT 'pdsh -M B ativates module B' '
 	EXTRA_PDSH_ARGS="-M B" 
 	module_is_active misc/B && module_is_inactive misc/A
 '
-test_expect_success 'PDSH_MISC_MODULES option works' '
+test_expect_success NOTROOT 'PDSH_MISC_MODULES option works' '
 	PDSH_MISC_MODULES=B
 	module_is_active misc/B && module_is_inactive misc/A
 '
-test_expect_success '-M option overrides PDSH_MISC_MODULES environment var' '
+test_expect_success NOTROOT '-M option overrides PDSH_MISC_MODULES environment var' '
 	OUTPUT=$(PDSH_MISC_MODULES=B pdsh -MA -L 2>&1)
 	say_color error "$OUTPUT"
 '
-test_expect_success 'pdsh help string correctly displays options of loaded modules' '
+test_expect_success NOTROOT 'pdsh help string correctly displays options of loaded modules' '
 	OUTPUT=$(pdsh -h 2>&1 | grep ^-a) &&
 	test_output_matches "$OUTPUT" "Module A" &&
 	OUTPUT=$(pdsh -M B -h 2>&1 | grep ^-a) &&
 	test_output_matches "$OUTPUT" "Module B"
 '
-test_expect_success 'Loading conflicting module with -M causes error' '
+test_expect_success NOTROOT 'Loading conflicting module with -M causes error' '
 	OUTPUT=$(pdsh -MA,B 2>&1 | grep Warning)
 	test_output_matches "$OUTPUT" \
 		"Failed to initialize requested module \"misc/B\""
 '
 
-test_expect_success 'Conflicting modules dont run init()' '
+test_expect_success NOTROOT 'Conflicting modules dont run init()' '
     PDSH_MODULE_DIR=$TEST_DIRECTORY/test-modules
     if pdsh -q 2>&1 | grep "B: in init"; then
 	    say_color error "Error: init routine for module B run unexpectedly"
 		false
 	fi
 '
-test_expect_success 'Force loaded module runs init()' '
+test_expect_success NOTROOT 'Force loaded module runs init()' '
     PDSH_MODULE_DIR=$TEST_DIRECTORY/test-modules
     if ! pdsh -q -MB 2>&1 | grep "B: in init"; then
 	    say_color error "Error: init routine for module B not run with -M B"
 		false
     fi
 '
-test_expect_success 'New conflicting module does not run init() with -M' '
+test_expect_success NOTROOT 'New conflicting module does not run init() with -M' '
     PDSH_MODULE_DIR=$TEST_DIRECTORY/test-modules
     if pdsh -q -MB 2>&1 | grep "A: in init"; then
 		say_color error "Error: A init routine run with -M B"
